--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "react-router build",
+    "build": "react-router build && mv ./build/client/__spa-fallback.html ./build/client/404.html",
     "dev": "react-router dev",
     "start": "react-router-serve ./build/server/index.js",
     "typecheck": "react-router typegen && tsc"
@@ -14,10 +14,13 @@
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-router/fs-routes": "^7.7.0",
     "@react-router/node": "^7.7.0",
     "@react-router/serve": "^7.7.0",
+    "@tanstack/react-query": "^5.83.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,9 +31,10 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.0",
     "react-intl": "^7.1.11",
+    "react-qr-code": "^2.0.18",
     "react-router": "^7.7.0",
     "tailwind-merge": "^3.3.1",
-    "zod": "^4.0.8"
+    "zod": "^4.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
