--- a/package.json
+++ b/package.json
@@ -9,45 +9,46 @@
     "typecheck": "react-router typegen && tsc"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
+    "@hookform/resolvers": "^5.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
-    "@react-router/fs-routes": "^7.7.0",
-    "@react-router/node": "^7.7.0",
-    "@react-router/serve": "^7.7.0",
+    "@react-router/fs-routes": "^7.7.1",
+    "@react-router/node": "^7.7.1",
+    "@react-router/serve": "^7.7.1",
     "@tanstack/react-query": "^5.83.0",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.28",
-    "lucide-react": "^0.525.0",
-    "motion": "^12.23.6",
+    "lucide-react": "^0.526.0",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.61.0",
+    "react-hook-form": "^7.61.1",
     "react-intl": "^7.1.11",
     "react-qr-code": "^2.0.18",
-    "react-router": "^7.7.0",
+    "react-router": "^7.7.1",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.10"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.2",
-    "@react-router/dev": "^7.7.0",
+    "@react-router/dev": "^7.7.1",
     "@tailwindcss/vite": "^4.1.11",
     "@types/canvas-confetti": "^1.9.0",
-    "@types/node": "^24.0.15",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "tailwindcss": "^4.1.11",
-    "tw-animate-css": "^1.3.5",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5.8.3",
-    "vite": "^7.0.5",
+    "vite": "^7.0.6",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
