--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "isbot": "^5.1.28",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.526.0",
     "motion": "^12.23.9",
     "react": "^19.1.0",
