--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,18 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.1.2/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.2.2/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
+  "overrides": [
+    {
+      "includes": ["app/app.css"],
+      "linter": {
+        "enabled": false
+      }
+    }
+  ],
   "files": {
     "ignoreUnknown": false,
     "includes": ["**", "!**/node_modules", "!**/dist"]
@@ -32,9 +40,14 @@
     "rules": {
       "recommended": true,
       "nursery": {
-        "noFloatingPromises": "error",
-        "noTsIgnore": "error",
         "noImportCycles": "error"
+      },
+      "correctness": {
+        "useUniqueElementIds": {
+          "options": {
+            "excludedComponents": ["FormattedMessage"]
+          }
+        }
       },
       "complexity": {
         "noExcessiveCognitiveComplexity": "error",
